--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -51,6 +51,10 @@ html, body {
     height: 100%;
 }
 
+li > ol {
+    list-style: lower-roman;
+}
+
 #wrap {
     min-height: 100%;
     height: auto !important;
@@ -76,4 +80,14 @@ html, body {
         padding-left: 20px;
         padding-right: 20px;
     }
+}
+
+.tab-pane > .well {
+    padding-top: 9px;
+    padding-bottom: 9px;
+}
+
+.tab-pane > .well h3 {
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
