--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,8 +12,7 @@
 
 <div class="row">
 	<div class="span8 offset2 well">
-		<%= gmaps4rails(@json) %>
-        <%= yield(:scripts)%>
+		<img src="assets/worldmap.jpg" alt="World Map Place Holder" title="World Map" />
 	</div>
 </div>
 
